Finished all required CSS elements, added pseudo classes, transitions, transformation, fixed visuals, z-index & opacity, and different positioning schemes. Also fixed css stylesheet references

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,11 +1,73 @@
 table {
     border-collapse: collapse;
     width: 100%;
+    margin-top: 200px;
+    position: relative;
+    z-index: -1;
+}
+
+a.link{
+    color: antiquewhite;
+}
+
+div.fixed_top_navbar{
+    position: fixed;
+    border: 3px solid;
+    width: 100%;
+    top: 0;
+    left: 0;
+    margin: auto;
+    padding: 10px;
+    background-color: darkslategrey;
+    text-align: center;
+    color: antiquewhite;
+}
+
+div.fixed_bottom_banner{
+    position: fixed;
+    border: 3px solid;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    padding: 10px;
+    background-color: darkslategrey;
+    text-align: center;
+    color: antiquewhite;
 }
 
 th, td {
     text-align: left;
     padding: 8px;
+}
+.flagpic{
+    border: double;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    opacity: 0.4;
+    -webkit-transform: rotate(353deg);
+    transform: rotate(353deg);
+}
+
+.flagpic:hover{
+    -webkit-transform: rotate(7deg);
+    transform: rotate(7deg);
+}
+
+div.transition{
+    width:10px;
+    height:10px;
+    background: #e3d4ff;
+    -webkit-transition: width 2s;
+    transition: width 2s;
+
+}
+
+div.transition:hover{
+    width: 300px;
+
 }
 
 tr:nth-child(even){background-color: #f2f2f2}
@@ -13,4 +75,12 @@ tr:nth-child(even){background-color: #f2f2f2}
 th {
     background-color: darkorchid;
     color: white;
+}
+
+p:first-child i {
+    color: mediumvioletred;
+}
+
+p:last-of-type {
+    color: blue;
 }
